--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -31,16 +31,40 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/taskExtra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="Task extra..."
+                android:textColor="?attr/colorPrimaryVariant"
+                android:textSize="14sp" />
+
+
+            <TextView
                 android:id="@+id/taskDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="Task details..."
                 android:textSize="14sp" />
-        </LinearLayout>
 
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/type"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TYPE"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textSize="12sp"
+                android:typeface="monospace"
+                card_view:chipIconVisible="false"
+                card_view:chipMinHeight="28dp" />
+
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textCountdown"
@@ -52,6 +76,7 @@
             android:textColor="?attr/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
+
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
