--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -18,7 +18,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:elevation="5dp"
-            android:title="Task Manager"
+            android:title="@string/app_name"
             app:titleCentered="true"
             app:titleTextColor="?attr/colorOnPrimary" />
 
